[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Art/helpButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/helpButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/helpBox.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/dicey/diceyStill.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/dicey/diceyBlink.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/dicey/diceyTalk.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/help1.PNG" type="Texture" id=7]
[ext_resource path="res://Assets/Art/help2.PNG" type="Texture" id=8]
[ext_resource path="res://Assets/Art/help0.PNG" type="Texture" id=9]
[ext_resource path="res://Assets/Fonts/Font.tres" type="DynamicFont" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "talk",
"speed": 7.0
} ]

[node name="helpButton" type="TextureButton"]
margin_left = 842.365
margin_top = 340.837
margin_right = 2762.36
margin_bottom = 1420.84
rect_scale = Vector2( 0.0945018, 0.106751 )
texture_normal = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Node2D" type="Node2D" parent="."]

[node name="helpBox" type="Sprite" parent="Node2D"]
position = Vector2( -3518.25, -181.652 )
scale = Vector2( 5.55501, 5.555 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D/helpBox"]
frames = SubResource( 1 )
frame = 14
playing = true

[node name="help0" type="Control" parent="Node2D"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help1" type="Sprite" parent="Node2D/help0"]
position = Vector2( -1045.67, -792.864 )
scale = Vector2( 3.23824, 3.23824 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="Node2D/help0"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -2640.3
margin_top = -1653.33
margin_right = -2241.3
margin_bottom = -1622.33
rect_scale = Vector2( 8.34468, 9.1657 )
text = "Hello! I'm Dicey, your help guide. Click on one of the buttons
to my right if you need help!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Node2D"]
margin_left = -4619.35
margin_top = -1859.72
margin_right = -4508.35
margin_bottom = -1827.72
rect_scale = Vector2( 14.4298, 14.4298 )
custom_fonts/font = ExtResource( 10 )
text = "HOW TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Node2D"]
margin_left = -4560.72
margin_top = -1340.97
margin_right = -4457.72
margin_bottom = -1320.97
rect_scale = Vector2( 14.4298, 14.4298 )
custom_fonts/font = ExtResource( 10 )
text = "BATTLEMAP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Node2D"]
margin_left = -4560.72
margin_top = -761.088
margin_right = -4457.72
margin_bottom = -741.088
rect_scale = Vector2( 14.4298, 14.4298 )
custom_fonts/font = ExtResource( 10 )
text = "DICE BOX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Node2D"]
margin_left = -4560.72
margin_top = -152.217
margin_right = -4457.72
margin_bottom = -132.217
rect_scale = Vector2( 14.4298, 14.4298 )
custom_fonts/font = ExtResource( 10 )
text = "WIP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help1" type="Control" parent="Node2D"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help1" type="Sprite" parent="Node2D/help1"]
position = Vector2( -1045.67, -792.864 )
scale = Vector2( 3.23824, 3.23824 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Node2D/help1"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -2731.56
margin_top = -1883.28
margin_right = -2332.56
margin_bottom = -1869.28
rect_scale = Vector2( 8.11962, 8.11962 )
text = "When you start the game, you'll likely see something like this!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Node2D/help1"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -2578.17
margin_top = 183.096
margin_right = -2179.17
margin_bottom = 333.096
rect_scale = Vector2( 8.11962, 8.11962 )
text = "This is the battlemap. Here, units that are GREEN are yours.
Units RED are hostile. Each unit has its health, as a number, 
over their head.
Once a unit runs out of health, they are destroyed.
Units can be controlled by clicking on them, then clicking on a
point on the map.
You can (and should) use WASD and the scroll wheel to move 
around the map!
Your goal is to have at least one unit reach the flag. When
two units get too close to each other, they engage!
To know more about combat, go to the DICE BOX.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help2" type="Control" parent="Node2D"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help1" type="Sprite" parent="Node2D/help2"]
position = Vector2( -1045.67, -792.864 )
scale = Vector2( 3.23824, 3.23824 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Node2D/help2"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -2671.86
margin_top = -1939.1
margin_right = -2272.86
margin_bottom = -1925.1
rect_scale = Vector2( 8.75939, 10.9146 )
text = "This is the battlemap. Here, you'll manage your strategy."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Node2D/help2"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -2554.36
margin_top = 186.464
margin_right = -2141.36
margin_bottom = 387.464
rect_scale = Vector2( 7.56419, 7.60455 )
text = "Units, when not moving, have a shield next to their symbol.
This means that they are \"defending\", and will have a significant
defensive boost!
You may have noticed black circles, with dot's inside them,
on your units or wherever you click to command your units.
These are the unit's destinations! Typically, the enemy will place
their destination right over your units. If a unit does NOT have
a circle+dot over them, the enemy is not targetting them.
Despite your defensive boost, be aware that it is likely a 
loosing battle to stay still. Your best bet to victory is to 
get to the goal! Remember, only ONE unit needs to
make it..."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="." to="." method="_on_helpButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Node2D/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Node2D/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Node2D/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Node2D/Button4" to="." method="_on_Button4_pressed"]
